"Version 3"

@startuml

/' ********** CLASES ********** '/

class AlgoThief{
+ iniciarJuego()
+ actualizarHora(int horas)
+ mostrarOpcionesViaje()
+ entrarAEdificio()
+ capturaDelicuente()
+ viajarA(destino)
}

class Mapa{
-ciudadesRecorridasPorDelicuente
-ciudadesNoRecorridasPorDelincuente

+ mostrarOpcionesViaje()
+ crearCiudades(string nombreArchivo)
+ distribuirCiudadesRecorridasNoRecorridas(cantidadCiudades: int)
+ crearPistasCiudades(listaDePistasDelincuente: List<List<String>> )
}

class Policia{
-cantidadArrestos

+ entrarAEdificio(indiceEdificio)
+ viajarA(destino) : int

}

abstract class Rango{
-velocidad
-cantidadNecesariaParaAscender

+ {abstract} ascender(cantidadArrestos))
}

class RangoNovato{
+ascender(cantidadArrestos)
}

class RangoDetective{
+ascender(cantidadArrestos)
}

class RangoInvestigador{
+ascender(cantidadArrestos)
}

class RangoSargento{
+ascender(cantidadArrestos)
}

class Delincuente{
-sexo
-hobby
-colorPelo
-vehiculo
-senia

+generarPista(cantidadArrestos):List<List<String>>
+atacar()
}

class Brujula{

{static} +calcularDistanciaEntre(origen, destino) : (int distancia)
}


class Ciudad{
-poblacion:string
-bandera:string
-moneda:string
-idioma:string
-contadorVisitaEdificio: int

+entrarAEdificio(indiceEdificio)
+generarPista(ciudadSiguiente, pistaDelincuente)
}

class Reloj{

+aumentarHoras(int:aumento)
+obtenerHorario()
}

abstract class Edificio{

+ MostrarPista()
+ {abstract} generarPista(ciudadSiguiente,pistaDelincuente)
}

class Banco{
-pista
+ generarPista(ciudadSiguiente,pistaDelincuente)
}

class Puerto{
-pista
+ generarPista(ciudadSiguiente,pistaDelincuente)
}

class Museo{
-pista
+ generarPista(ciudadSiguiente,pistaDelincuente)
}

class Computadora{
-sexosPosibles : list
-hobbysPosibles : list
-vehiculosPosibles : list
-colorPeloPosibles : list
-seniasPosibles : list
-listaDelincuentes : list

+seleccionarOpcion()
+buscarSospechosos()
-emitirOrdenArresto()
}

interface Arma{
+herirJugador()
}

class ArmaBlanca{
+herirJugador()
}

class ArmaDeFuego{
+herirJugador()
}

/' ********** DEPENDENCIAS ********** '/

AlgoThief --> Policia
AlgoThief --> Reloj
AlgoThief --> Delincuente
AlgoThief --> Mapa
AlgoThief --> Computadora

Mapa "1" --> "*" Ciudad

Museo ..|> Edificio
Banco ..|> Edificio
Puerto ..|> Edificio

Policia --> Ciudad
Policia --> Mapa
Policia --> Brujula
Policia --> Rango
RangoNovato ..|> Rango
RangoDetective ..|> Rango
RangoSargento ..|> Rango
RangoInvestigador ..|> Rango

Delincuente --> Arma

ArmaBlanca ..|> Arma
ArmaDeFuego ..|> Arma


Ciudad "1" --> "3" Edificio


@enduml




